Fixed Newsletter checkbox alignment
https://basecamp.com/1759305/projects/281910-collectorsquest-com/todos/14596989-newsletter-checkbox

--- a/web/less/frontend/_footer.less
+++ b/web/less/frontend/_footer.less
@@ -243,6 +243,12 @@ footer {
     padding-top: 5px;
     padding-left: 5px;
   }
+
+	.newsletter-checkbox {
+		width: auto;
+		float: left;
+		margin: 3px 5px 15px 0;
+	}
 }
 
 //Social-icons
